--- a/clash-config.ini
+++ b/clash-config.ini
@@ -32,4 +32,4 @@ custom_proxy_group=🔵 IPDB-API/其他`load-balance`^(?!.*(?:港|澳|HK|hk|Hong
 
 enable_rule_generator=true
 overwrite_original_rules=true
-clash_rule_base=https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GeneralClashConfig.yml
+clash_rule_base=https://raw.githubusercontent.com/xznwwh/cmliu-ACL4SSR/main/clash_rule_base.yaml
