--- a/clash-config.ini
+++ b/clash-config.ini
@@ -18,7 +18,7 @@ custom_proxy_group=🚀 节点选择`select`[]☑️ TG`[]♻️ 自动选择`[]
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.apple.com/library/test/success.html`300,,50
 custom_proxy_group=🔯 故障转移`fallback`.*`http://www.apple.com/library/test/success.html`300,,50
 custom_proxy_group=🔮 负载均衡`load-balance`.*`http://www.apple.com/library/test/success.html`300,,50
-custom_proxy_group=🇭🇰 香港节点`load-balance`(港|澳|HK|hk|Hong Kong|HongKong|hongkong|MO|HKG|MFM)`http://www.apple.com/library/test/success.html`300,,50
+custom_proxy_group=🇭🇰 香港节点`load-balance`(港|澳|HK|hk|Hong Kong|HongKong|hongkong|MO|HKG|MFM)`http://www.apple.com/library/test/success.html`true`300,,50
 custom_proxy_group=🇯🇵 日本节点`load-balance`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan|NRT|KIX)`http://www.apple.com/library/test/success.html`300,,50
 custom_proxy_group=🇺🇲 美国节点`load-balance`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States|ATL|BUF|DFW|EWR|IAD|LAX|MCI|MIA|ORD|PHX|PDX|SEA|SJC)`http://www.apple.com/library/test/success.html`300,,150
 custom_proxy_group=🇹🇼 台湾节点`load-balance`(台|新北|彰化|TW|Taiwan|TPE|KHH)`http://www.apple.com/library/test/success.html`300,,50
