--- a/clash-config.ini
+++ b/clash-config.ini
@@ -16,13 +16,13 @@ ruleset=🚀 节点选择,[]FINAL
 
 custom_proxy_group=🚀 节点选择`select`[]☑️ 更新tg:@piaosir`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🟠 电信优选`[]🟡 移动优选`[]🟢 联通优选`[]🔵 API/其他`
 custom_proxy_group=☑️ 更新tg:@piaosir`select`(www.kora--online.live|www.wto.org|www.who.int)`http://www.apple.com/library/test/success.html`300,,50
-custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.apple.com/library/test/success.html`300,,50
+custom_proxy_group=♻️ 自动选择`url-test`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`http://www.apple.com/library/test/success.html`300,,50
 custom_proxy_group=🔯 故障转移`fallback`.*`http://www.apple.com/library/test/success.html`300,,50
 custom_proxy_group=🔮 负载均衡`load-balance`.*`http://www.apple.com/library/test/success.html`300,,50
-custom_proxy_group=🇭🇰 香港节点`load-balance`(港|澳|HK|hk|Hong Kong|HongKong|hongkong|MO|HKG|MFM)`http://www.apple.com/library/test/success.html`300,,50
-custom_proxy_group=🇯🇵 日本节点`load-balance`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan|NRT|KIX)`http://www.apple.com/library/test/success.html`300,,50
-custom_proxy_group=🇸🇬 狮城节点`load-balance`(新加坡|坡|狮城|SG|Singapore|SIN)`http://www.apple.com/library/test/success.html`300,,50
-custom_proxy_group=🇰🇷 韩国节点`load-balance`(KR|Korea|KOR|首尔|韩|韓|ICN)`http://www.apple.com/library/test/success.html`300,,50
+custom_proxy_group=🇭🇰 香港节点`url-test`(港|澳|HK|hk|Hong Kong|HongKong|hongkong|MO|HKG|MFM)`http://www.apple.com/library/test/success.html`300,,50
+custom_proxy_group=🇯🇵 日本节点`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan|NRT|KIX)`http://www.apple.com/library/test/success.html`300,,50
+custom_proxy_group=🇸🇬 狮城节点`url-test`(新加坡|坡|狮城|SG|Singapore|SIN)`http://www.apple.com/library/test/success.html`300,,50
+custom_proxy_group=🇰🇷 韩国节点`url-test`(KR|Korea|KOR|首尔|韩|韓|ICN)`http://www.apple.com/library/test/success.html`300,,50
 custom_proxy_group=🟠 电信优选`load-balance`(CT|电信优选)`http://www.apple.com/library/test/success.html`300,,50
 custom_proxy_group=🟡 移动优选`load-balance`(CMCC)`http://www.apple.com/library/test/success.html`300,,50
 custom_proxy_group=🟢 联通优选`load-balance`(联通优选)`http://www.apple.com/library/test/success.html`300,,50
