--- a/clash-config.ini
+++ b/clash-config.ini
@@ -23,10 +23,10 @@ custom_proxy_group=🇭🇰 香港节点`url-test`(港|澳|HK|hk|Hong Kong|HongK
 custom_proxy_group=🇯🇵 日本节点`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan|NRT|KIX)`http://www.apple.com/library/test/success.html`300,,50
 custom_proxy_group=🇸🇬 狮城节点`url-test`(新加坡|坡|狮城|SG|Singapore|SIN)`http://www.apple.com/library/test/success.html`300,,50
 custom_proxy_group=🇰🇷 韩国节点`url-test`(KR|Korea|KOR|首尔|韩|韓|ICN)`http://www.apple.com/library/test/success.html`300,,50
-custom_proxy_group=🟠 电信优选`load-balance`(CT|电信优选)`http://www.apple.com/library/test/success.html`300,,50
-custom_proxy_group=🟡 移动优选`load-balance`(CMCC)`http://www.apple.com/library/test/success.html`300,,50
-custom_proxy_group=🟢 联通优选`load-balance`(联通优选)`http://www.apple.com/library/test/success.html`300,,50
-custom_proxy_group=🔵 API/其他`load-balance`^(?!.*(?:港|澳|HK|hk|Hong Kong|HongKong|hongkong|MO|HKG|MFM|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan|NRT|KIX|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States|ATL|BUF|DFW|EWR|IAD|LAX|MCI|MIA|ORD|PHX|PDX|SEA|SJC|台|新北|彰化|TW|Taiwan|TPE|KHH|新加坡|坡|狮城|SG|Singapore|SIN|KR|Korea|KOR|首尔|韩|韓|ICN|CT|CMCC|联通优选|电信优选|www.kora--online.live|www.wto.org|www.who.int)).*$`http://www.apple.com/library/test/success.html`300,,50
+custom_proxy_group=🟠 电信优选`url-test`(CT|电信优选)`http://www.apple.com/library/test/success.html`300,,50
+custom_proxy_group=🟡 移动优选`url-test`(CMCC)`http://www.apple.com/library/test/success.html`300,,50
+custom_proxy_group=🟢 联通优选`url-test`(联通优选)`http://www.apple.com/library/test/success.html`300,,50
+custom_proxy_group=🔵 API/其他`url-test`^(?!.*(?:港|澳|HK|hk|Hong Kong|HongKong|hongkong|MO|HKG|MFM|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan|NRT|KIX|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States|ATL|BUF|DFW|EWR|IAD|LAX|MCI|MIA|ORD|PHX|PDX|SEA|SJC|台|新北|彰化|TW|Taiwan|TPE|KHH|新加坡|坡|狮城|SG|Singapore|SIN|KR|Korea|KOR|首尔|韩|韓|ICN|CT|CMCC|联通优选|电信优选|www.kora--online.live|www.wto.org|www.who.int)).*$`http://www.apple.com/library/test/success.html`300,,50
 
 
 
