--- a/clash-config.ini
+++ b/clash-config.ini
@@ -14,7 +14,7 @@ ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ch
 ruleset=DIRECT,[]GEOIP,CN,no-resolve
 ruleset=🚀 节点选择,[]FINAL
 
-custom_proxy_group=🚀 节点选择`select`[]☑️ 更新tg:@piaosir`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🟠 电信优选`[]🟡 移动优选`[]🟢 联通优选`[]🔵 API/其他`
+custom_proxy_group=🚀 节点选择`select`[]☑️ 更新tg:@piaosir`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🟠 电信优选`[]🟡 移动优选`[]🟢 联通优选`[]🔵 API/其他`🟣 三网通用`
 custom_proxy_group=☑️ 更新tg:@piaosir`select`(www.kora--online.live|www.wto.org|www.who.int)`http://www.apple.com/library/test/success.html`300,,50
 custom_proxy_group=♻️ 自动选择`url-test`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`http://www.apple.com/library/test/success.html`300,,50
 custom_proxy_group=🔯 故障转移`fallback`.*`http://www.apple.com/library/test/success.html`300,,50
@@ -27,7 +27,7 @@ custom_proxy_group=🟠 电信优选`url-test`(CT|电信优选)`http://www.apple
 custom_proxy_group=🟡 移动优选`url-test`(CMCC)`http://www.apple.com/library/test/success.html`300,,50
 custom_proxy_group=🟢 联通优选`url-test`(联通优选)`http://www.apple.com/library/test/success.html`300,,50
 custom_proxy_group=🔵 API/其他`url-test`^(?!.*(?:港|澳|HK|hk|Hong Kong|HongKong|hongkong|MO|HKG|MFM|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan|NRT|KIX|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States|ATL|BUF|DFW|EWR|IAD|LAX|MCI|MIA|ORD|PHX|PDX|SEA|SJC|台|新北|彰化|TW|Taiwan|TPE|KHH|新加坡|坡|狮城|SG|Singapore|SIN|KR|Korea|KOR|首尔|韩|韓|ICN|CT|CMCC|联通优选|电信优选|www.kora--online.live|www.wto.org|www.who.int)).*$`http://www.apple.com/library/test/success.html`300,,50
-
+custom_proxy_group=🟣 三网通用`url-test`(TG@Warp_Key)`http://www.apple.com/library/test/success.html`300,,50
 
 
 enable_rule_generator=true
