--- a/clash-config.ini
+++ b/clash-config.ini
@@ -14,8 +14,8 @@ ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ch
 ruleset=DIRECT,[]GEOIP,CN,no-resolve
 ruleset=🚀 节点选择,[]FINAL
 
-custom_proxy_group=🚀 节点选择`select`[]🔥 亚洲自动`[]♻️ 全球自动`[]🔮 负载均衡`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🟠 电信优选`[]🟡 移动优选`[]🟢 联通优选`[]🔵 API/其他`[]🟣 三网通用`[]☑️ 更新tg:@piaosir`
-custom_proxy_group=☑️ 更新tg:@piaosir`select`(www.kora--online.live|www.wto.org|www.who.int)`http://www.apple.com/library/test/success.html`300,,50
+custom_proxy_group=🚀 节点选择`select`[]🔥 亚洲自动`[]♻️ 全球自动`[]🔮 负载均衡`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🟠 电信优选`[]🟡 移动优选`[]🟢 联通优选`[]🔵 API/其他`[]🟣 三网通用`[]☑️ 频道:@piaosir`
+custom_proxy_group=☑️ 频道:@piaosir`select`(www.kora--online.live|www.wto.org|www.who.int)`http://www.apple.com/library/test/success.html`300,,50
 custom_proxy_group=🔥 亚洲自动`url-test`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`http://www.apple.com/library/test/success.html`300,,50
 custom_proxy_group=♻️ 全球自动`url-test`.*`http://www.apple.com/library/test/success.html`300,,50
 custom_proxy_group=🔮 负载均衡`load-balance`.*`http://www.apple.com/library/test/success.html`300,,50
