--- a/clash-config.ini
+++ b/clash-config.ini
@@ -14,10 +14,10 @@ ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ch
 ruleset=DIRECT,[]GEOIP,CN,no-resolve
 ruleset=🚀 节点选择,[]FINAL
 
-custom_proxy_group=🚀 节点选择`select`[]🔥 🇭🇰🇯🇵🇸🇬🇰🇷`[]💥 🟠🟡🟢🔵🟣`[]🇭🇰🇯🇵🇸🇬🇰🇷🟠🟡🟢🔵🟣`[]🇭🇰🇯🇵🇸🇬🇰🇷🟠🟡🟢🔵🟣`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🟠 电信优选`[]🟡 移动优选`[]🟢 联通优选`[]🔵 API/其他`[]🟣 三网通用`[]☑️ 频道:@piaosir`
+custom_proxy_group=🚀 节点选择`select`[]🔥 🇭🇰🇯🇵🇸🇬🇰🇷`[]🟠🟡🟢🔵🟣`[]🇭🇰🇯🇵🇸🇬🇰🇷🟠🟡🟢🔵🟣`[]🇭🇰🇯🇵🇸🇬🇰🇷🟠🟡🟢🔵🟣`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🟠 电信优选`[]🟡 移动优选`[]🟢 联通优选`[]🔵 API/其他`[]🟣 三网通用`[]☑️ 频道:@piaosir`
 custom_proxy_group=☑️ 频道:@piaosir`select`(www.kora--online.live|www.wto.org|www.who.int)`http://www.apple.com/library/test/success.html`300,,50
 custom_proxy_group=🔥 🇭🇰🇯🇵🇸🇬🇰🇷`load-balance`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`
-custom_proxy_group=💥 🟠🟡🟢🔵🟣`load-balance`[]🟠 电信优选`[]🟡 移动优选`[]🟢 联通优选`[]🔵 API/其他`[]🟣 三网通用`
+custom_proxy_group=🟠🟡🟢🔵🟣`load-balance`[]🟠 电信优选`[]🟡 移动优选`[]🟢 联通优选`[]🔵 API/其他`[]🟣 三网通用`
 custom_proxy_group=🇭🇰🇯🇵🇸🇬🇰🇷🟠🟡🟢🔵🟣`url-test`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🟠 电信优选`[]🟡 移动优选`[]🟢 联通优选`[]🔵 API/其他`[]🟣 三网通用`http://www.apple.com/library/test/success.html`300,,50
 custom_proxy_group=🇭🇰🇯🇵🇸🇬🇰🇷🟠🟡🟢🔵🟣`load-balance`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🟠 电信优选`[]🟡 移动优选`[]🟢 联通优选`[]🔵 API/其他`[]🟣 三网通用`
 custom_proxy_group=🇭🇰 香港节点`url-test`(港|澳|HK|hk|Hong Kong|HongKong|hongkong|MO|HKG|MFM)`http://www.apple.com/library/test/success.html`300,,50
