--- a/clash-config.ini
+++ b/clash-config.ini
@@ -15,7 +15,7 @@ ruleset=DIRECT,[]GEOIP,CN,no-resolve
 ruleset=🚀 节点选择,[]FINAL
 
 custom_proxy_group=🚀 节点选择`select`[]🔥 🇭🇰🇯🇵🇸🇬🇰🇷`[]🟠🟡🟢🔵🟣`[]🈷️ 🇭🇰🇯🇵🇸🇬🇰🇷🟠🟡🟢🔵🟣`[]🈺 🇭🇰🇯🇵🇸🇬🇰🇷🟠🟡🟢🔵🟣`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🟠 电信优选`[]🟡 移动优选`[]🟢 联通优选`[]🔵 API/其他`[]🟣 三网通用`[]☑️ 频道:@piaosir`
-custom_proxy_group=☑️ 频道:@piaosir`select`(www.kora--online.live|www.wto.org|www.who.int)`http://www.apple.com/library/test/success.html`300,,50
+custom_proxy_group=☑️ 频道:@piaosir`fallback`(www.kora--online.live|www.wto.org|www.who.int)`http://www.apple.com/library/test/success.html`300,,50
 custom_proxy_group=🔥 🇭🇰🇯🇵🇸🇬🇰🇷`load-balance`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`http://www.apple.com/library/test/success.html`300,,50
 custom_proxy_group=🟠🟡🟢🔵🟣`load-balance`[]🟠 电信优选`[]🟡 移动优选`[]🟢 联通优选`[]🔵 API/其他`[]🟣 三网通用`http://www.apple.com/library/test/success.html`300,,50
 custom_proxy_group=🈷️ 🇭🇰🇯🇵🇸🇬🇰🇷🟠🟡🟢🔵🟣`load-balance`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🟠 电信优选`[]🟡 移动优选`[]🟢 联通优选`[]🔵 API/其他`[]🟣 三网通用`http://www.apple.com/library/test/success.html`300,,50
