--- a/clash-config.ini
+++ b/clash-config.ini
@@ -17,7 +17,7 @@ ruleset=🚀 节点选择,[]FINAL
 custom_proxy_group=🚀 节点选择`select`[]☑️ 频道:@piaosir`[]🔥 亚洲地区`[]🔥 官方IP`[]🔥 亚洲+官方`[]🔥 (亚洲+官方)自动`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🟠 电信优选`[]🟡 移动优选`[]🟢 联通优选`[]🔵 API/其他`[]🟣 三网通用`
 custom_proxy_group=☑️ 频道:@piaosir`fallback`(www.kora--online.live|www.wto.org|www.who.int)`http://www.apple.com/library/test/success.html`300,,50
 custom_proxy_group=🔥 亚洲地区`load-balance`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`http://www.apple.com/library/test/success.html`300,,50
-custom_proxy_group=🔥 官方Ip`load-balance`[]🟠 电信优选`[]🟡 移动优选`[]🟢 联通优选`[]🔵 API/其他`[]🟣 三网通用`http://www.apple.com/library/test/success.html`300,,50
+custom_proxy_group=🔥 官方IP`load-balance`[]🟠 电信优选`[]🟡 移动优选`[]🟢 联通优选`[]🔵 API/其他`[]🟣 三网通用`http://www.apple.com/library/test/success.html`300,,50
 custom_proxy_group=🔥 亚洲+官方`load-balance`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🟠 电信优选`[]🟡 移动优选`[]🟢 联通优选`[]🔵 API/其他`[]🟣 三网通用`http://www.apple.com/library/test/success.html`300,,50
 custom_proxy_group=🔥 (亚洲+官方)自动`url-test`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🟠 电信优选`[]🟡 移动优选`[]🟢 联通优选`[]🔵 API/其他`[]🟣 三网通用`http://www.apple.com/library/test/success.html`300,,50
 custom_proxy_group=🇭🇰 香港节点`url-test`(港|澳|HK|hk|Hong Kong|HongKong|hongkong|MO|HKG|MFM)`http://www.apple.com/library/test/success.html`300,,50
